Changed layout for index and extended seed-file

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -3,7 +3,7 @@
   background-position: center;
   padding-top: 45vh;
   padding-inline: 150px;
-  background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('banner.jpg');
+  background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url();
   height: 100vh;
   // width: 100vw !important;
 }
