back to initial primary

--- a/app/assets/stylesheets/config/_bootstrap_variables.scss
+++ b/app/assets/stylesheets/config/_bootstrap_variables.scss
@@ -11,8 +11,7 @@ $font-size-base: 0.75rem;
 
 // Colors
 $body-color: $gray;
-$primary:    #d0006f;
-$secondary: #f6be00;
+$primary:    $blue;
 $success:    $green;
 $info:       $yellow;
 $danger:     $red;
