--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,6 +8,12 @@
       <span class="navbar-toggler-icon"></span>
     </button>
 
+    <div>
+    <% if user_signed_in? %>
+      <%= render 'shared/notifications' %>
+    <% end %>
+    </div>
+
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto">
         <% if user_signed_in? %>
