creating the initial filter

--- a/app/views/gruppettos/index.html.erb
+++ b/app/views/gruppettos/index.html.erb
@@ -10,6 +10,7 @@
   </div>
 </div>
 <div class=""  style=" width:100%;position:fixed; left: 50%; transform:translate(-50%, -50%);  z-index:1000; ">
+<button type="button" class="btn btn-primary w-100" data-bs-toggle="modal" data-bs-target="#exampleModalScrollable">Search Filter</button>
   <ul class="nav nav-tabs nav-fill d-flex justify-content-around bd-highlight start-10" style="width:100%; background:white;" role="tablist">
     <li class="nav-item">
       <% if params[:type] == "upcoming" %>
@@ -34,13 +35,8 @@
     </li>
   </ul>
 </div>
-<div class="container mt-4" style="position:relative; top:0;">
-<% @gruppettos.each do | gruppetto | %>
-  <%# renders the index_card.html.erb with sending the gruppetto params %>
-  <div class="">
-    <%= render "index_card", gruppetto: gruppetto %>
-  </div>
-<% end %>
+<div class="container mt-10" style="position:relative; top:0;">
+<%= render "search" %>
 </div>
 <div class="d-flex justify-content-between fixed-bottom bg-white p-2">
   <div class="w-50">
