--- a/app/views/playground/tiles.html
+++ b/app/views/playground/tiles.html
@@ -1,22 +1,46 @@
 <head>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" integrity="sha384-rOA1PnstxnOBLzCLMcre8ybwbTmemjzdNlILg8O7z1lUkLXozs4DHonlDtnE7fpc" crossorigin="anonymous"></script>
+  <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/solid.js" integrity="sha384-/BxOvRagtVDn9dJ+JGCtcofNXgQO/CCCVKdMfL115s3gOgQxWaX/tSq5V8dRgsbc" crossorigin="anonymous"></script>
+  <script defer src="https://use.fontawesome.com/releases/v5.15.4/js/fontawesome.js" integrity="sha384-dPBGbj4Uoy1OOpM4+aRGfAOc0W37JkROT+3uynUgTHZCHZNMHfGXsmmvYTffZjYO" crossorigin="anonymous"></script>
+  <style>
+    .footer-nav {
+      overflow: hidden;
+      position: fixed;
+      bottom: 0;
+      width: 100%;
+      background-color: #1f1e1e;
+      color: #e9e8dd;
+      height: 100px;
+    }
+  </style>
 </head>
 <body>
-
-
-<div class="btn-group w-100">
-  <input type="hidden" name="gruppetto[difficulty]" value="" autocomplete="off">
-  <div class="flex-grow-1">
-    <input class="form-check-input radio_buttons optional btn-check" type="radio" value="Easy" name="gruppetto[difficulty]" id="gruppetto_difficulty_easy" autocomplete="off">
-    <label class="btn btn-outline-primary w-100" for="gruppetto_difficulty_easy">Easy</label>
+  <div class='footer-nav d-flex justify-content-between' height=150px style="position:fixed">
+    <div>
+      <a href="">
+        Tracks
+      </a>
+    </div>
+    <div>
+      <a href="">
+        All
+      </a>
+    </div>
+    <div>
+      <a href="">
+        <i class="fa-solid fa-circle-plus" style="color:white;"></i> New
+      </a>
+    </div>
+    <div>
+      <a href="">
+        my
+      </a>
+    </div>
+    <div>
+      <a href="">
+        <img height="25" width="25" class="rounded-circle shadow-sm" src="http://res.cloudinary.com/dyvocxltk/image/upload/c_fill,h_25,w_25/v1/development/9p1qvfjuvb70agr30b8rck50mgq7">
+      </a>
+    </div>
   </div>
-  <div class="flex-grow-1 mx-3">
-      <input class="btn-check" type="radio" value="Moderate" name="gruppetto[difficulty]" id="gruppetto_difficulty_moderate" autocomplete="off">
-      <label class="btn btn-outline-primary w-100" for="gruppetto_difficulty_moderate">Moderate</label>
-  </div>
-  <div class="flex-grow-1">
-    <input class="btn-check" type="radio" value="Hard" name="gruppetto[difficulty]" id="gruppetto_difficulty_hard" autocomplete="off">
-    <label class="btn btn-outline-primary w-100" for="gruppetto_difficulty_hard">Hard</label>
-  </div>
-</div>
 </body>
