--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -7,9 +7,10 @@ $yellow: #FFC65A;
 $orange: #E67E22;
 $gray: #0E0000;
 
+$gray-400: #ced4da;
 
+$black: #101012;
 $light-gray: #e9e8dd;
-$dark-gray: #262626;
-$darker-grey: #1f1e1e;
+$dark-gray: #1f2023;
 $green: #37caa8;
 $light-green: #8adfcf;
