--- a/app/views/gruppettos/index.html.erb
+++ b/app/views/gruppettos/index.html.erb
@@ -37,7 +37,7 @@
 <div class="mt-4 col-12" style="position:relative; top:0;">
 
   <%# renders the index_card.html.erb with sending the gruppetto params %>
-  <table class="table table-hover">
+  <table class="table table-hover table-borderless">
     <thead>
     </thead>
       <tbody>
