--- a/app/views/gruppettos/_index_card.html.erb
+++ b/app/views/gruppettos/_index_card.html.erb
@@ -1,15 +1,15 @@
 <tr>
   <td>
   <%= link_to gruppetto_path(gruppetto), class: 'text-decoration-none' do  %>
-    <div class="d-flex" style="color:#0E0000">
+    <div class="d-flex bg-dark p-2 rounded">
         <div>
           <% unless gruppetto.track.image.url.nil? %>
-            <%= cl_image_tag gruppetto.track.image.key, height: 80, width: 80, crop: :fill %>
+            <%= cl_image_tag gruppetto.track.image.key, height: 80, width: 80, crop: :fill, class: 'rounded-top' %>
           <% else %>
-            <%= image_tag "track-fallback.svg", height: 80, width: 80 %>
+            <%= image_tag "track-fallback.svg", height: 80, width: 80, class: 'rounded-top' %>
           <% end %>
-          <div class="bg-secondary">
-            <p class='mb-0 ml-2 text-center'>
+          <div class="bg-secondary rounded-bottom">
+            <p class='mb-0 ml-2 text-center text-light'>
               <%= gruppetto.participants.count %> rider<%= gruppetto.participants.count > 1 ? 's' : '' %>
             </p>
           </div>
@@ -17,9 +17,9 @@
         <div class="m-1 ms-3 flex-grow-1">
           <div class="d-flex">
             <div>
-              <h5 class="mb-0 overflow-hidden" style="color:#0E0000"><%= gruppetto.name %></h5>
+              <h5 class="mb-0 overflow-hidden text-light fw-bold"><%= gruppetto.name %></h5>
               <div class="d-flex">
-                <p class="overflow-hidden text-muted"><%= gruppetto.start.strftime('%d.%m.%Y  - %l%P') unless gruppetto.start.nil? %></p>
+                <p class="overflow-hidden text-light fw-lighter"><%= gruppetto.start.strftime('%d.%m.%Y  - %l%P') unless gruppetto.start.nil? %></p>
               </div>
             </div>
             <div class="d-flex flex-grow-1 align-items-baseline">
@@ -29,21 +29,21 @@
             <div class="d-flex justify-content-start">
               <div class="d-flex align-items-baseline"  style="width: 120px;">
                 <i class="fa-solid fa-gauge" style="margin-left:2px;"></i>
-                <p class="ms-2 mb-0 flex-grow-1 text-end overflow-hidden"><%= gruppetto.avg_speed.nil? ? " - " : gruppetto.avg_speed %> km/h</p>
+                <p class="ms-2 mb-0 flex-grow-1 text-end overflow-hidden text-light"><%= gruppetto.avg_speed.nil? ? " - " : gruppetto.avg_speed %> km/h</p>
               </div>
               <div class="d-flex align-items-baseline"  style="width: 120px;margin-left:24px;">
                 <i class="fa-solid fa-route"></i>
-                <p class="ms-2 mb-0 flex-grow-1 text-end overflow-hidden"><%= gruppetto.track.total_km.nil? ? " - " : gruppetto.track.total_km %> km</p>
+                <p class="ms-2 mb-0 flex-grow-1 text-end overflow-hidden text-light"><%= gruppetto.track.total_km.nil? ? " - " : gruppetto.track.total_km %> km</p>
               </div>
             </div>
             <div class="d-flex justify-content-start">
               <div class="d-flex align-items-baseline"  style="width: 120px;">
                 <i class="fa-solid fa-dumbbell"></i>
-                <p class="ms-2 mb-0 flex-grow-1 text-center overflow-hidden"><%= gruppetto.difficulty.nil? ? " - " : gruppetto.difficulty %> </p>
+                <p class="ms-2 mb-0 flex-grow-1 text-center overflow-hidden text-light"><%= gruppetto.difficulty.nil? ? " - " : gruppetto.difficulty %> </p>
               </div>
               <div class="d-flex align-items-baseline" style="width: 120px;margin-left:24px;">
                 <i class="fa-solid fa-mountain"></i>
-                <p class="ms-2 mb-0 flex-grow-1 text-end overflow-hidden"><%= gruppetto.track.total_km.nil? ? " - " : gruppetto.track.total_vm %> vm</p>
+                <p class="ms-2 mb-0 flex-grow-1 text-end overflow-hidden text-light"><%= gruppetto.track.total_km.nil? ? " - " : gruppetto.track.total_vm %> vm</p>
               </div>
             </div>
           </div>
