--- a/app/views/shared/_footer_nav.html.erb
+++ b/app/views/shared/_footer_nav.html.erb
@@ -1,3 +1,30 @@
-<div class='w-100' height=150px>
-Lolol
+<div class="d-flex justify-content-between w-100 bg-dark p-2 align-self-stretch" style="position:fixed; bottom:0;z-index:10000;">
+    <div class='flex-grow-1'>
+      <%= link_to gruppettos_path do %>
+        <h2 class='m-0 text-center mt-2'><i class="fa-solid fa-house" style='color:white'></i></h2>
+      <% end %>
+    </div>
+    <div class='flex-grow-1'>
+
+      <%# we need to add link to uocoming gruppettos %>
+        <%= link_to gruppettos_path do %>
+          <h2 class='m-0 text-center mt-2'><i class="fa-regular fa-calendar" style='color:white'></i></h2>
+        <% end %>
+    </div>
+    <div class='flex-grow-1'>
+
+        <%= link_to new_gruppetto_path do %>
+          <h2 class='m-0 text-center mt-2'><i class="fa-solid fa-circle-plus" style='color:white'></i></h2>
+        <% end %>
+    </div>
+    <div class='flex-grow-1'>
+      <h2 class='m-0 text-center mt-2'><i class="fa-solid fa-user-group" style='color:white'></i></h2>
+    </div>
+    <div class='flex-grow-1 justify-content-center d-flex'>
+      <% if current_user.avatar.key.nil? %>
+        <%= image_tag "avatar-fallback.svg", height: 40, width: 40, class: 'rounded-circle shadow-sm' %>
+      <% else %>
+        <%= cl_image_tag current_user.avatar.key, height: 40, width: 40, crop: :fill, class: 'rounded-circle shadow-sm' %>
+      <% end %>
+    </div>
 </div>
