--- a/app/views/gruppettos/index.html.erb
+++ b/app/views/gruppettos/index.html.erb
@@ -1,65 +1,61 @@
 <%# Navigation bar at the top   %>
 
 <%# Map with the start locations of each gruppettos %>
-
-<div class="" style="position: sticky; top: 6%; z-index:1000;">
+<div class="" style="position: sticky; top: 6%; z-index:-1000;">
   <div style="width:100%; height: 40vh;"
       data-controller="map"
       data-map-markers-value="<%= @markers.to_json %>"
       data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
   </div>
 </div>
-<div class=""  style=" width:100%;position:fixed; left: 50%; transform:translate(-50%, -50%);  z-index:1000; ">
-<button type="button" class="btn btn-primary w-100" data-bs-toggle="modal" data-bs-target="#exampleModalScrollable">Search Filter</button>
-  <ul class="nav nav-tabs nav-fill d-flex justify-content-around bd-highlight start-10" style="width:100%; background:white;" role="tablist">
-    <li class="nav-item">
-      <% if params[:type] == "upcoming" %>
-        <%= link_to "Upcoming", gruppettos_path(type: "upcoming"), class: "nav-link active bg-primary bg-gradient text-white", data_toggle: "tab", role: "tab", aria_controls: "tasks", aria_selected: "true"%>
-      <% else %>
-        <%= link_to "Upcoming", gruppettos_path(type: "upcoming"), class: "nav-link bg-hover-primary-10", data_toggle: "tab", role: "tab", aria_controls: "files", aria_selected: "false"%>
-      <% end %>
-    </li>
-    <li class="nav-item bg-hover-primary-10">
-      <% if params[:type] == "going" %>
-        <%= link_to "Going", gruppettos_path(type: "going"), class: "nav-link active bg-primary bg-gradient text-white", data_toggle: "tab", role: "tab", aria_controls: "tasks", aria_selected: "true"%>
-      <% else %>
-        <%= link_to "Going", gruppettos_path(type: "going"), class: "nav-link bg-hover-primary-10", data_toggle: "tab", role: "tab", aria_controls: "files", aria_selected: "false"%>
-      <% end %>
-    </li>
-    <li class="nav-item bg-hover-primary-10">
-      <% if params[:type] == "past" %>
-        <%= link_to "Past", gruppettos_path(type: "past"), class: "nav-link active bg-primary bg-gradient text-white", data_toggle: "tab", role: "tab", aria_controls: "tasks", aria_selected: "true"%>
-      <% else %>
-        <%= link_to "Past", gruppettos_path(type: "past"), class: "nav-link bg-hover-primary-10", data_toggle: "tab", role: "tab", aria_controls: "files", aria_selected: "false"%>
-      <% end %>
-    </li>
-  </ul>
-</div>
-<div class="container mt-4" style="position:relative; top:0;">
-<%= render "search" %>
-<div class="my-5">
-<% @gruppettos.each do | gruppetto | %>
+
+
+<div class=""  style="">
+
+    <ul class="nav nav-tabs nav-fill d-flex justify-content-around bd-highlight start-10" style="width:100%; background:white;" role="tablist">
+      <li class="nav-item">
+        <% if params[:type] == "upcoming" %>
+          <%= link_to "Upcoming", gruppettos_path(type: "upcoming"), class: "nav-link active bg-primary bg-gradient text-white", data_toggle: "tab", role: "tab", aria_controls: "tasks", aria_selected: "true"%>
+        <% else %>
+          <%= link_to "Upcoming", gruppettos_path(type: "upcoming"), class: "nav-link bg-hover-primary-10", data_toggle: "tab", role: "tab", aria_controls: "files", aria_selected: "false"%>
+        <% end %>
+      </li>
+      <li class="nav-item bg-hover-primary-10">
+        <% if params[:type] == "going" %>
+          <%= link_to "Going", gruppettos_path(type: "going"), class: "nav-link active bg-primary bg-gradient text-white", data_toggle: "tab", role: "tab", aria_controls: "tasks", aria_selected: "true"%>
+        <% else %>
+          <%= link_to "Going", gruppettos_path(type: "going"), class: "nav-link bg-hover-primary-10", data_toggle: "tab", role: "tab", aria_controls: "files", aria_selected: "false"%>
+        <% end %>
+      </li>
+      <li class="nav-item bg-hover-primary-10">
+        <% if params[:type] == "past" %>
+          <%= link_to "Past", gruppettos_path(type: "past"), class: "nav-link active bg-primary bg-gradient text-white", data_toggle: "tab", role: "tab", aria_controls: "tasks", aria_selected: "true"%>
+        <% else %>
+          <%= link_to "Past", gruppettos_path(type: "past"), class: "nav-link bg-hover-primary-10", data_toggle: "tab", role: "tab", aria_controls: "files", aria_selected: "false"%>
+        <% end %>
+      </li>
+    </ul>
+  </div>
+<div class="mt-4" style="">
+  <%= render "search" %>
+<div>
+  <button type="button"
+          class="btn btn-primary w-25"
+          data-bs-toggle="modal"
+          data-bs-target="#exampleModalScrollable"
+          style='position:fixed;left:35vw;bottom:78px'>
+    Search Filter
+  </button>
   <%# renders the index_card.html.erb with sending the gruppetto params %>
   <table class="table table-hover table-borderless">
     <thead>
     </thead>
       <tbody>
         <% @gruppettos.each do | gruppetto | %>
-         <%= render "index_card", gruppetto: gruppetto %>
+        <%= render "index_card", gruppetto: gruppetto %>
         <% end %>
     </tbody>
   </table>
-  <div class="">
-    <%= render "index_card", gruppetto: gruppetto %>
-  </div>
-<% end %>
-</div>
-</div>
-<div class="d-flex justify-content-between fixed-bottom bg-white p-2">
-  <div class="w-50">
-    <%= link_to "Back to Grupettos", gruppettos_path, class: "btn btn-outline-primary w-100" %>
-  </div>
-  <div class="w-50">
-    <%= link_to "Home", root_path,class: "btn btn-primary w-100"%>
+
   </div>
 </div>
