--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,8 +22,8 @@
 
   <body>
     <%= render "shared/navbar" %>
-    <div style='margin-top:56px'>
-      <%= render "shared/flashes" %>
+    <div style='margin-top:56px;margin-bottom:56px' class='p-0'>
+      <%= render "shared/flashes"%>
 
       <%= yield %>
     </div>
