--- a/app/views/gruppettos/index.html.erb
+++ b/app/views/gruppettos/index.html.erb
@@ -9,7 +9,7 @@
   </div>
 </div>
 
-
+<% if false %>
 <div class=""  style="">
 
     <ul class="nav nav-tabs nav-fill d-flex justify-content-around bd-highlight start-10" style="width:100%; background:white;" role="tablist">
@@ -36,6 +36,7 @@
       </li>
     </ul>
   </div>
+  <%end %>
 <div class="mt-4" style="">
   <%= render "search" %>
 <div>
