--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,24 +1,16 @@
-.banner {
-  background-size: cover;
+
+body, html{
+  height:100%;
+  margin:0;
+}
+.masthead {
+  // background: url('background-jan.jpg') no-repeat center center fixed;
+  background-image:linear-gradient(to bottom, rgba(245, 246, 252, 0.52), rgba(0, 65, 11, 0.73)),url('background-jan.jpg');
+  height:100vh;
   background-position: center;
-  padding-top: 45vh;
-  padding-inline: 150px;
-  background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url();
-  height: 100vh;
-  // width: 100vw !important;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-
-.banner h1 {
-  margin: 0;
-  color: white;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  font-size: 32px;
-  font-weight: bold;
-}
-
-.banner p {
-  font-size: 20px;
-  color: white;
-  opacity: .7;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+.homecard{
+  background-image:linear-gradient(to bottom, rgba(0, 55, 43, 0.4), rgba(89, 157, 142, 0.00));
 }
