--- a/app/views/gruppettos/index.html.erb
+++ b/app/views/gruppettos/index.html.erb
@@ -37,7 +37,7 @@
     </ul>
   </div>
   <%end %>
-<div class="mt-4" style="">
+<div class="" style="margin-top:-10px;">
   <%= render "search" %>
 <div>
   <button type="button"
@@ -48,7 +48,7 @@
     Search Filter
   </button>
   <%# renders the index_card.html.erb with sending the gruppetto params %>
-  <table class="table table-hover table-borderless">
+  <table class="table table-hover table-borderless" style="background: rgba(238,238,238,0.9);border-radius: 10px;">
     <thead>
     </thead>
       <tbody>
