--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,11 @@
-<div class="banner">
-  <div class="container">
-    <h1>Find your next grupetto</h1>
-    <p>powered by GroupAppO</p>
-    <%= link_to "Find your gruppetto", gruppettos_path, class: "btn btn-primary" %>
-  </div>
-</div>
+<header class="masthead">
+    <div class="container px-4 px-lg-5 d-flex h-100 align-items-center justify-content-start">
+        <div class="d-flex justify-content-start">
+            <div class="text-start p-4 rounded homecard">
+                <h1 class="mx-auto my-0 text-uppercase" style="color:#37caa8; text-shadow: 1px 1px #00372B;">Find your next grupetto</h1>
+                <h2 class="mx-auto mt-2 mb-5 shaddow" style="color:white;">powered by GroupAppO</h2>
+                <%= link_to "Find your gruppetto", gruppettos_path, class: "btn btn-primary shaddow" %>
+            </div>
+        </div>
+    </div>
+</header>
