--- a/app/views/gruppettos/show.html.erb
+++ b/app/views/gruppettos/show.html.erb
@@ -117,7 +117,7 @@
   <% if current_user == @gruppetto.user %>
     <div class="border-top mx-5 pt-3 text-center">
     <h5 class="text-center">Gruppetto Host View - Manage Attendance</h5>
-    <% if @gruppetto.participant.count > 1 %>
+    <% if @gruppetto.participants.count > 1 %>
           <div class="py-2">
             <table class="table table-hover table-responsive-sm justify-content-between">
               <thead>
