--- a/app/views/notifications/_notification.html.erb
+++ b/app/views/notifications/_notification.html.erb
@@ -1,56 +1,68 @@
+<div data-controller="delete-notifications-list">
+    <div class="d-flex justify-content-between p-3">
+      <h1>Notifications</h1>
+      <%= link_to notifications_delete_path,
+            data: {action: "click->delete-notifications-list#remove", turbo_method: :delete, turbo_track:"reload"},
+            class: "btn" do %>
+          <p>Clear all notifications</p>
+      <% end %>
+    </div>
 
-  <h1>Notifications</h1>
-
-  <table class="table table-hover table-responsive-sm justify-content-between">
-  <thead>
-    <tr>
-    </tr>
-  </thead>
-  <tbody>
-    <% @notifications.reverse_each do |notification| %>
-      <% notification_type = notification.type %>
-        <tr>
-        <%# <tr data-action="click->notification-subscription#setUnread"> %>
-          <td class="align-middle ps-4">
-            <% if notification.read? %>
-              <i class="fa-regular fa-envelope-open"></i>
-            <% else %>
-              <i class="fa-regular fa-envelope"></i>
-            <% end %>
-          </td>
-          <td>
-            <% case notification_type %>
-            <% when "NewFriendRequestNotification" %>
-              <%= link_to mark_as_read_path(notification), class: "text-decoration-none" do %>
-              <p>
-                <%= notification.params[:friendship].user.first_name %> has sent you a friend request
-              </p>
-              <p><%= notification.created_at.to_date.strftime("%e %b at %l%P") %></p>
-              <% end %>
-            <% when "AcceptedFriendRequest" %>
-              <%= link_to mark_as_read_path(notification), class: "text-decoration-none" do %>
-              <p>
-                <%= notification.params[:friendship].friend.first_name %> has accepted your friend request
-              </p>
-              <p><%= notification.created_at.to_date.strftime("%e %b at %l%P") %></p>
-              <% end %>
-            <% when "NewParticipationRequest" %>
-              <%= link_to mark_as_read_path(notification), class: "text-decoration-none" do %>
-              <p>
-                <%= notification.params[:participation].user.first_name %> has requested to join your gruppetto - <%= notification.params[:participation].gruppetto.name %>
-              </p>
-              <p><%= notification.created_at.to_date.strftime("%e %b at %l%P") %></p>
-              <% end %>
-            <% when "AcceptedParticipantRequest" %>
-              <%= link_to mark_as_read_path(notification), class: "text-decoration-none" do %>
-              <p>
-                <%= notification.params[:participation].gruppetto.user.first_name %> has accepted your request to join their gruppetto
-              </p>
-              <p><%= notification.created_at.to_date.strftime("%e %b at %l%P") %></p>
-              <% end %>
-            <% end %>
-          </td>
-        </tr>
-    <% end %>
-  </tbody>
-</table>
+    <div data-delete-notifications-list-target="table">
+      <table class="table table-hover table-responsive-sm justify-content-between"
+              data-toggle="table" data-sort-name="read_at" data-sort-order="asc">
+        <thead>
+          <tr>
+          </tr>
+        </thead>
+        <tbody>
+          <% @notifications.sort_by { |obj| obj.created_at }.reverse %>
+          <% @notifications.each do |notification| %>
+            <% notification_type = notification.type %>
+              <tr>
+                <td class="align-middle ps-4">
+                  <% if notification.read_at%>
+                    <i class="fa-regular fa-envelope-open"></i>
+                  <% else %>
+                    <i class="fa-regular fa-envelope"></i>
+                  <% end %>
+                </td>
+                <td>
+                  <% case notification_type %>
+                  <% when "NewFriendRequestNotification" %>
+                    <%= link_to mark_as_read_path(notification), class: "text-decoration-none" do %>
+                    <p>
+                      <%= notification.params[:friendship].user.first_name %> has sent you a friend request
+                    </p>
+                    <p><%= notification.created_at.to_date.strftime("%e %b at %l%P") %></p>
+                    <% end %>
+                  <% when "AcceptedFriendRequest" %>
+                    <%= link_to mark_as_read_path(notification), class: "text-decoration-none" do %>
+                    <p>
+                      <%= notification.params[:friendship].friend.first_name %> has accepted your friend request
+                    </p>
+                    <p><%= notification.created_at.to_date.strftime("%e %b at %l%P") %></p>
+                    <% end %>
+                  <% when "NewParticipationRequest" %>
+                    <%= link_to mark_as_read_path(notification), class: "text-decoration-none" do %>
+                    <p>
+                      <%= notification.params[:participation].user.first_name %> has requested to join your gruppetto - <%= notification.params[:participation].gruppetto.name %>
+                    </p>
+                    <p><%= notification.created_at.to_date.strftime("%e %b at %l%P") %></p>
+                    <% end %>
+                  <% when "AcceptedParticipantRequest" %>
+                    <%= link_to mark_as_read_path(notification), class: "text-decoration-none" do %>
+                    <p>
+                      <%= notification.params[:participation].gruppetto.user.first_name %> has accepted your request to join their gruppetto
+                    </p>
+                    <p><%= notification.created_at.to_date.strftime("%e %b at %l%P") %></p>
+                    <% end %>
+                  <% end %>
+                </td>
+              </tr>
+              </div>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+</div>
