--- a/app/views/shared/_notifications.html.erb
+++ b/app/views/shared/_notifications.html.erb
@@ -1,15 +1,20 @@
-<%= link_to notifications_path, class: "container notifications", data: { controller: "notification-subscription"} do %>
-  <button type="button" class="btn btn-outline-secondary position-relative">
-    <i class="fa-regular fa-bell"></i>
+<div data-controller="notification-subscription">
+  <%= link_to notifications_path, class: "container notifications" do %>
+    <button type="button" class="btn btn-outline-secondary position-relative">
+      <i class="fa-regular fa-bell"></i>
 
-    <% if current_user.notifications.count > 0%>
-        <% if current_user.notifications.unread.count > 0%>
-          <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger"
-                data-notification-subscription-target="notification-count">
-              <%= current_user.notifications.unread.count %>
-            <span class="visually-hidden">unread messages</span>
-          </span>
-        <% end %>
-    <% end %>
-  </button>
-<% end %>
+      <% if current_user.notifications.count > 0 %>
+          <% if current_user.notifications.unread.count > 0 %>
+            <div class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                <span data-notification-subscription-target="count" id="notification-count">
+                  <%= current_user.notifications.unread.count %>
+
+                </span>
+                <span class="visually-hidden">unread messages</span>
+            </div>
+          <% end %>
+      <% end %>
+    </button>
+  <% end %>
+
+</div>
