--- a/app/views/participations/_buttons.html.erb
+++ b/app/views/participations/_buttons.html.erb
@@ -1,24 +1,26 @@
-<% if  participant.participation_status == "Rejected" %>
-  <%= link_to "Accept",
-    accept_participation_path(gruppetto, participant),
-    data: {turbo_method: :accept, turbo_track:"reload"},
-    class: "btn btn-outline-success btn-sm"
-  %>
-<% elsif participant.participation_status == "Attending" %>
-  <%= link_to "Reject",
-    reject_participation_path(gruppetto, participant),
-    data: {turbo_method: :reject, turbo_track:"reload"},
-    class: "btn btn-outline-danger btn-sm"
-  %>
-<% elsif participant.participation_status == "Pending" %>
-  <%= link_to "Accept",
-    accept_participation_path(gruppetto, participant),
-    data: {turbo_method: :accept, turbo_track:"reload"},
-    class: "btn btn-outline-success btn-sm"
-  %>
-  <%= link_to "Reject",
-    reject_participation_path(gruppetto, participant),
-    data: {turbo_method: :reject, turbo_track:"reload"},
-    class: "btn btn-outline-danger btn-sm"
-  %>
-<% end %>
+<div class="d-flex flex-column">
+  <% if  participant.participation_status == "Rejected" %>
+    <%= link_to "Accept",
+      accept_participation_path(gruppetto, participant),
+      data: {turbo_method: :accept, turbo_track:"reload"},
+      class: "btn btn-outline-success mb-1"
+    %>
+  <% elsif participant.participation_status == "Attending" %>
+    <%= link_to "Reject",
+      reject_participation_path(gruppetto, participant),
+      data: {turbo_method: :reject, turbo_track:"reload"},
+      class: "btn btn-outline-danger  mb-1"
+    %>
+  <% elsif participant.participation_status == "Pending" %>
+    <%= link_to "Accept",
+      accept_participation_path(gruppetto, participant),
+      data: {turbo_method: :accept, turbo_track:"reload"},
+      class: "btn btn-outline-success  mb-1"
+    %>
+    <%= link_to "Reject",
+      reject_participation_path(gruppetto, participant),
+      data: {turbo_method: :reject, turbo_track:"reload"},
+      class: "btn btn-outline-danger  mb-1"
+    %>
+  <% end %>
+</div>
